4243045_fr_FR_03_04/all.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx:1.21-alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: debug
    image: alpine:3.12
    command: ["sleep","3600"]
