4243045_fr_FR_03_04/debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  labels:
    app: debug
spec:
  containers:
  - name: debug
    image: alpine:3.12
    command: ["sleep","3600"]
